@@ -1,3 +1,8 @@
+2006-02-21  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* src/htdocs/news/news.xml:
+	Add news item for the release
+
 2006-02-20  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* src/htdocs/entities.gst:
